--- a/src/pages/Character/components/CardEpisode.module.css
+++ b/src/pages/Character/components/CardEpisode.module.css
@@ -6,6 +6,7 @@
   background-color: var(--bg-secondary);
   border-radius: var(--radius-short-element);
   font-size: 0.8rem;
+  gap: 0.5rem;
 }
 .title {
   font-size: 1rem;
